add change password

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Django E-Commerce</title>
+	<title>{% block title %}Django E-Commerce{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
+  <link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -39,7 +40,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-                <li><a href="#">{{ user.username }}</a></li>
+                <li><a href="{% url 'accounts:index' %}">{{ user.name }}</a></li>
               <li><a href="{% url 'logout' %}">Sair</a></li>
             {% else %}
               <li><a href="{% url 'login' %}">Entrar</a></li>
@@ -49,7 +50,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container margin-top">
         {% block container %}
         {% endblock %}
 		<footer>
