--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -51,6 +51,13 @@
       </div>
     </div>
     <div class="container margin-top">
+        {% block messages %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+              {{ message }}
+            </div>
+          {% endfor %}
+        {% endblock %}
         {% block container %}
         {% endblock %}
 		<footer>
